--- a/enviroment.yml
+++ b/enviroment.yml
@@ -1,9 +1,9 @@
-name: rl_env
+prefix: ./.env/rl_env
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.13
+  - python=3.11
   - pip
   - numpy
   - pandas
@@ -16,11 +16,10 @@ dependencies:
       - torch==2.3.0
       - torchvision==0.18.0
       - torchaudio==2.3.0
-      - gymnasium[classic-control,accept-rom]==0.29.1
+      - gymnasium[classic-control]==0.28.1
       - stable-baselines3[extra]==2.3.0
       - ray[rllib]==2.34.0
       - optuna==3.6.1
-      - htm.bindings
       - yfinance==0.2.40
       - alpha_vantage==3.0.0
       - ta==0.11.0
