--- a/enviroment.yml
+++ b/enviroment.yml
@@ -1,26 +1,14 @@
-prefix: ./.env/rl_env
+prefix: ./.venv/rl_env
 channels:
   - conda-forge
   - defaults
 dependencies:
   - python=3.11
   - pip
-  - numpy
-  - pandas
-  - matplotlib
-  - seaborn
-  - scikit-learn
-  - scipy
-  - jupyterlab
+  - numpy=1.26.*           # required by TF 2.13
+  - pandas                 # used by yfinance
   - pip:
+      - tensorflow==2.13.1 # Keras included
       - torch==2.3.0
-      - torchvision==0.18.0
-      - torchaudio==2.3.0
-      - gymnasium[classic-control]==0.28.1
-      - stable-baselines3[extra]==2.3.0
-      - ray[rllib]==2.34.0
-      - optuna==3.6.1
-      - yfinance==0.2.43
-      - alpha_vantage==3.0.0
-      - ta==0.11.0
-      - mlflow==2.16.0
+      - gymnasium==0.29.1
+      - yfinance>=0.2.43
