updated dep and cart test

--- a/enviroment.yml
+++ b/enviroment.yml
@@ -5,10 +5,10 @@ channels:
 dependencies:
   - python=3.11
   - pip
-  - numpy=1.26.*           # required by TF 2.13
-  - pandas                 # used by yfinance
+  - numpy           
+  - pandas          
   - pip:
-      - tensorflow==2.13.1 # Keras included
-      - torch==2.3.0
-      - gymnasium==0.29.1
-      - yfinance>=0.2.43
+      - tensorflow
+      - torch
+      - gymnasium
+      - yfinance
