setup single step test

--- a/enviroment.yml
+++ b/enviroment.yml
@@ -10,5 +10,5 @@ dependencies:
   - pip:
       - tensorflow
       - torch
-      - gymnasium
+      - gymnasium[classic_control]
       - yfinance
