setup a simple cart RL agent using a PPO model

--- a/enviroment.yml
+++ b/enviroment.yml
@@ -12,3 +12,8 @@ dependencies:
       - torch
       - gymnasium[classic_control]
       - yfinance
+      - matplotlib
+      - jupyterlab
+      - seaborn
+      - scikit-learn
+      - stable-baselines3
