--- a/environment-nupic.yml
+++ b/environment-nupic.yml
@@ -1,26 +1,28 @@
 # Legacy NuPIC (HTM) environment
 # NOTE: NuPIC 1.0.5 only supports up to Python 3.6. This env is isolated and EOL Python is a security risk.
 # Use ONLY if you specifically need the original NuPIC API. Prefer the modern htm.core alternative when possible.
-# Channels: numenta channel hosts the NuPIC builds; conda-forge provides updated build infra for deps.
+# The historical 'numenta' channel is no longer accessible; we'll rely on pip to fetch the legacy wheel.
 name: nupic36
 channels:
-  - numenta
   - conda-forge
   - defaults
 dependencies:
   - python=3.6.*  # NuPIC compatibility
   - pip
-  - numpy=1.19.*  # Conservative upper bound (NuPIC wheels built against older numpy)
+  - numpy=1.19.*  # Matches a range that still works with many old wheels; adjust down to 1.18.5 if needed
   - setuptools<60  # Avoid newer build system issues with old packages
   - wheel
   - pywin32  # Windows native extensions support
   - psutil
   - pip:
-      - nupic==1.0.5
-      # If install fails due to binary issues, consider adding: "--only-binary :all:" via manual pip command
+    - nupic==1.0.5
+    # If install fails: try pinning numpy to 1.18.5 then reinstall nupic
+    # You can also attempt: pip install --no-cache-dir --only-binary :all: nupic==1.0.5
 
 # Post-create test commands (PowerShell):
 #   conda env create -f environment-nupic.yml
 #   conda activate nupic36
 #   python -c "import nupic, pkg_resources; print('NuPIC', nupic.__version__)"
-# If import fails, try forcing a reinstall: pip install --no-cache-dir nupic==1.0.5
+# If import fails, try:
+#   pip install --no-cache-dir --force-reinstall nupic==1.0.5
+#   pip install numpy==1.18.5
