--- a/.gitignore
+++ b/.gitignore
@@ -152,6 +152,8 @@ ENV/
 env.bak/
 venv.bak/
 .vscode
+.requirements.txt
+
 
 # Spyder project settings
 .spyderproject
@@ -214,3 +216,4 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+condaenv.iw4wefqq.requirements.txt
