--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
-sonar.projectKey=millscb_SWENG480
+sonar.projectKey=millscb_psu-capstone
 sonar.organization=millscb
 
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=SWENG480
+#sonar.projectName=psu-capstone
 #sonar.projectVersion=1.0
 
 
