--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=millscb_psu-capstone
-sonar.organization=millscb
+sonar.projectKey=egrembocki_psu-capstone
+sonar.organization=egrembocki
 
 
 # This is the name and version displayed in the SonarCloud UI.
